[package]
name = "manger"
version = "0.1.0"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
edition = "2018"
categories = ["parsing"]
keywords = ["combinatoric", "parser", "consume"]
repository = "https://github.com/coastalwhite/manger"
homepage = "https://github.com/coastalwhite/manger"
license = "MIT"
description = "A performant, low-level, lightweight and intuitive combinatoric parser library"

[badges.maintenance]
status = "actively-developed"

[dependencies]
utf8_slice = "^1.0.0"
either = "1.6.1"
thiserror = "1.0"
