[package]
name = "manger"
version = "0.1.1"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
edition = "2018"
categories = ["parsing"]
keywords = ["combinatoric", "parser", "consume"]
repository = "https://github.com/coastalwhite/manger"
homepage = "https://github.com/coastalwhite/manger"
license = "MIT"
description = "A performant, low-level, lightweight and intuitive combinatoric parser library"

[workspace]
members = [
    'packages/manger-core',
    'packages/manger-macro',
    'packages/manger-std',
]

[badges.maintenance]
status = "actively-developed"

[dependencies]
manger-core = { version = "0.1.1", path = "packages/manger-core" }
manger-macro = { version = "0.1.0", path = "packages/manger-macro" }
manger-std = { version = "0.1.0", path = "packages/manger-std" }

[[test]]
name = "encased_integers"
path = "tests/encased_integer.rs"
